2017-04-10  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_var.c (array2str): Use glib strings instead of manually
	reallocating buffer string. Fix invalid memory write.

2017-04-07  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_ssh.c (nasl_ssh_login_interactive_pass): Fix error checks,
	to return the correct values.
	(nasl_ssh_login_interactive): Fix indentation

2017-04-07  Juan Jose Nicola  <juan.nicola@greenbone.net>

	New functions make possible to authenticate a user on an
	ssh connection in two steps, receiving the prompt between them.

	* nasl/nasl_init.c (libfuncs): Add ssh_login_interactive()
	and ssh_login_interactive_pass().

	* nasl/nasl_ssh.c (nasl_ssh_login_interactive)
	(nasl_ssh_login_interactive_pass): New functions.

	* nasl/nasl_ssh.h Add new functions prototypes.

2017-04-06  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nals.c (gcrypt_init): New function to initilalize libgcrypt.
	(main): Calls gcrypt_init().

2017-04-04  Juan Jose Nicola  <juan.nicola@greenbone.net>

	A connection failures to the redis-server is considered fatal to the
	running scan, meaning that it is stopped immediately and send an
	'Error' result.

	* src/attack.c: Define new error type ERR_REDIS_CONN.
	(launch_plugin): Check access to the knowledge base. If a
	problem is found, return an error and the running scan is stoped.
	(attack_host): Adds an item to the host knowledge base. After launch
	the plugin check if there was an error trying to connect to the
	redis-server. In that case send a error message.

2017-03-30  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Fix openvas-nasl-lint to recognize missing function.

	* nasl/exec.c (nasl_exec): New variable lint_mode. It is passed
	as argument to decl_nasl_func()

	* nasl/lint.c (nasl_lint_call, nasl_lint_def): New functions.
	(nasl_lint), use the new functions to check function definitions
	and function calls.

	* nasl/nasl_func.c (insert_nasl_func): Receive a new parameter.